fix shared alarm sounds and group snoozing
